# kr-gov-job-mcp

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  pyproject.toml
docs/: alio-disclosure-field-inventory.md  alio-html-structure.md  alio-pagination-policy.md  alio-sample-validation.md  career-coach-persona-test-report.md  career-page-collector.md  cleaneye-field-inventory.md  cleaneye-html-structure.md  collector-layer.md  collector-workflow.md  demo-scenario.md  erd.md  institution-analysis-inputs.md  job-alio-alio-b1020-linking.md  job-alio-field-inventory.md  job-fit-report.md  ncs-competency-mapping.md  press-release-collector.md  proposal.md  raw-data-inventory.md  server-scaffold.md  source-data-erd.md  tool-design.md
examples/: career-coach-personas.json  kisa-demo-input.json  kisa-demo-output.json  kisa-demo-output.md  kisa-demo-template.md  kisa-real-demo-output.md  raw-data-inventory.json
tests/: test_alio_average_salary.py  test_alio_disclosure_client.py  test_alio_disclosure_collector.py  test_alio_institution_context.py  test_application_strategy_tool.py  test_attachment_text_client.py  test_career_page_client.py  test_career_page_collector.py  test_cleaneye_client.py  test_cleaneye_collector.py  test_code_lookup_tool.py  test_collectors.py  test_docs.py  test_institution_context_tool.py  test_institution_inputs.py  test_institution_interview.py  test_institution_interview_tool.py  test_institution_strategy_tool.py  test_job_alio_collector.py  test_job_alio_institution_codes.py  test_job_alio_region_codes.py  test_mcp_http.py  (+20 more)
(+92 files in other folders)
